feat(xray): add route test
